--- a/style.css
+++ b/style.css
@@ -2,17 +2,19 @@ body {
     margin: 0;
     padding: 0;
     font-family: Verdana;
-    background-color: black;
+    background-color: whitesmoke;
 }
 
 .container {
     width: 80%;
-    margin: auto; /*alinha horizontalmente as coisas*/
+    margin: auto;
+    /*alinha horizontalmente as coisas*/
     display: flex;
 }
 
 .header {
     border-bottom: 3px solid #32b9cd;
+    background-color: black;
 }
 
 .titulo {
@@ -32,4 +34,54 @@ body {
 
 .header .container {
     justify-content: space-between;
+}
+
+.banner {
+    background-image: url("imagens/bg-jelly-fish-para_outras_pags.png");
+    width: 100%;
+    height: 500px;
+    display: flex;
+}
+
+.banner-title {
+    margin: 0;
+    padding: 0;
+    color: beige;
+    font-size: 35px;
+}
+
+.banner .container {
+    width: 10%;
+    justify-content: flex-end;
+}
+
+.card img {
+    height: 100px;
+    width: 100px;
+}
+
+.card h2 {
+    color: #EB3333;
+}
+
+.cards {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    gap: 100px;
+    padding: 5%;
+}
+
+.footer {
+    width: 100%;
+    height: 100px;
+    background-color: #32b9cd;
+    color: white;
+    text-align: center;
+    padding-top: 2%;
+
+}
+
+.footer p {
+    margin: 0;
 }
